--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(NS_conv VERSION 0.1 LANGUAGES CXX)
+project(numeral_systems_converter VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -22,31 +22,31 @@ set(PROJECT_SOURCES
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(NS_conv
+    qt_add_executable(numeral_systems_converter
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET NS_conv APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET numeral_systems_converter APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(NS_conv SHARED
+        add_library(numeral_systems_converter SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(NS_conv
+        add_executable(numeral_systems_converter
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(NS_conv PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(numeral_systems_converter PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
-set_target_properties(NS_conv PROPERTIES
+set_target_properties(numeral_systems_converter PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -54,10 +54,10 @@ set_target_properties(NS_conv PROPERTIES
     WIN32_EXECUTABLE TRUE
 )
 
-install(TARGETS NS_conv
+install(TARGETS numeral_systems_converter
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(NS_conv)
+    qt_finalize_executable(numeral_systems_converter)
 endif()
